--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -22,7 +22,7 @@
 
   $pageCount = $this->featureProducts->count();
 ?>
-    <div id="featureProducts" class="row" style=" height:100%">
+    <div id="featureProducts" class="" style=" height:100%">
         <div id="featureProducts-content" style="height:100%; width: 100%; padding-top: 30px;padding-bottom: 30px">
         <?php         
         foreach ($this->featureProducts as $this->product): ?>            
