--- a/application/modules/default/views/scripts/home/partials/comment.phtml
+++ b/application/modules/default/views/scripts/home/partials/comment.phtml
@@ -30,32 +30,33 @@ $helperTruncate = new Default_View_Helper_Truncate();
 
 
 
-<div  style="width: 200px; background-color: #f1f1f1; float: left; border:1px solid #ddd; margin:2px; height:230px">
-         
-     <div style="display: block; background-color: #fff; " class="text-center">        
-            <div class="userinfo">
-			<a href="/member/<?php echo $this->comment['member_id'] ?>">
-			<img src="<?= $helperImage->Image($this->comment['profile_image_url'],
-						array('width' => 60, 'height' => 60)) ?>"  style="margin:10px; width: 60px; height:60px; border-radius: 50%"/>
-				<span style="display: block"><?= $this->comment['username'] ?></span>
-			</a>
-		</div>
-            
-     </div>
-
-     <div style="padding:5px;">
-     
-            <?= $this->comment['title'] ?>      
-            
-     
-     
-        <div class="small" style="line-height:1.3"><a
+<div  style="width: 200px; background-color: #f1f1f1; float: left; border:1px solid #ddd; margin:2px; height:220px">
+    
+    <div style="padding:5px; display: block; height: 160px; background-color: #fff;  position: relative;">
+    
+        <div style="line-height:1.5"><a
 					href="/p/<?= $this->comment['project_id'] ?>">
 						<?=$helperTruncate->truncate($this->comment['comment_text'], 200, '...', false, true)?>
 					</a>
 			</div>
 			
-    
-    </div>
+			<span class="small" style="position: absolute; bottom: 0px;">
+    		<?= $this->comment['title'] ?>                  
+			</span>
+			
+    </div>    
+     <div style="display: block; "  class="">        
+         <div class="userinfo" >
+			<a href="/p/<?= $this->comment['project_id'] ?>">
+			<img src="<?= $helperImage->Image($this->comment['profile_image_url'],
+						array('width' => 60, 'height' => 60)) ?>"  style="margin: 5px; width: 40px; height:40px; border-radius: 50%; float: left"/>
+				<span style="display: block;padding-top:15px;"><?= $this->comment['username'] ?></span>
+			</a>
+				
+		</div>
+            
+     </div>
+
+     
 </div >
 
