--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -508,6 +508,7 @@
           margin: 0;
           padding: 0;
           position: absolute;
+          z-index: 999;
       }
 
     }
@@ -551,6 +552,7 @@
       margin: 0;
       padding: 0;
       position: absolute;
+      z-index: 999;
   }        
 
 /** /HEADER **/
