--- a/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
+++ b/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
@@ -26,28 +26,29 @@ if (false === isset($this->params)) {
 ?>
 <ul class="pagination pagination-sm" style="margin: 0;padding:0;">
     <li class="<?php echo isset($this->previous) ? '' : 'disabled' ?>">
-        <a class="<?php echo isset($this->previous) ? 'ajaxPartial' : '' ?>" href="<?php echo isset($this->previous) ? $this->url(array_merge($this->params,
+        <a class="<?php echo isset($this->previous) ? 'paginationPartial' : '' ?>" href="<?php echo isset($this->previous) ? $this->url(array_merge($this->params,
             array('page' => $this->previous))) : 'javascript:;'; ?>"><span
                 class="glyphicon glyphicon-chevron-left"></span></a></li>
 
     <?php foreach ($this->pagesInRange as $page): ?>
         <?php if ($page != $this->current): ?>
-            <li><a class="ajaxPartial" href="<?php echo $this->url(array_merge($this->params, array('page' => $page))); ?>"><?php echo $page; ?></a></li>
+            <li><a class="ajaxPartial paginationPartial" href="<?php echo $this->url(array_merge($this->params, array('page' => $page))); ?>"><?php echo $page; ?></a></li>
         <?php else: ?>
             <li class="active"><a class="paginationPartial" href="<?php echo $this->url(array_merge($this->params, array('page' => $page))); ?>"><?php echo $page; ?></a>
         <?php endif; ?>
     <?php endforeach; ?>
 
     <li class="<?php echo isset($this->next) ? '' : 'disabled' ?>">
-        <a class="<?php echo isset($this->next) ? 'ajaxPartial' : ''?>" href="<?php echo isset($this->next) ? $this->url(array_merge($this->params,
+        <a class="<?php echo isset($this->next) ? 'paginationPartial' : ''?>" href="<?php echo isset($this->next) ? $this->url(array_merge($this->params,
             array('page' => $this->next))) : 'javascript:;'; ?>"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
 </ul>
 <script type="application/javascript">
     $(document).ready(function () {
         $('body').on('click', 'ul.pagination a.paginationPartial', function (event) {
+
             event.preventDefault();
             var target = '<?=$this->dom_target?>';
-            var url = $(this).attr("href") + ' ' + target + ' > *';            
+            var url = $(this).attr("href") + ' ' + target + ' > *';                       
             $(target).load(url, function (response, status, xhr) {
                 if (status == "error") {
                     $(target).empty().html('Service is temporarily unavailable. Our engineers are working quickly to resolve this issue. <br/>Find out why you may have encountered this error.');
